<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:layoutDirection="rtl"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answers"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/columns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_below="@+id/title">

        <TextView
            android:id="@+id/porseshname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/questionnaireId"
            android:layout_alignParentStart="true"
            android:background="@drawable/rectangle6"
            android:gravity="center"
            android:padding="3dp"
            android:layout_weight="25"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/porseshname"
            android:text="@string/questionId"
            android:background="@drawable/rectangle6"
            android:gravity="center"
            android:padding="3dp"
            android:layout_weight="25"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/question"
            android:text="@string/answerId"
            android:background="@drawable/rectangle6"
            android:gravity="center"
            android:padding="3dp"
            android:layout_weight="20"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/pasokhgoo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/answer"
            android:background="@drawable/rectangle6"
            android:gravity="center"
            android:padding="3dp"
            android:layout_weight="30"
            android:text="@string/pasokhgoo"
            android:textSize="13sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/columns"
        android:layout_above="@id/lineAndButton"
        android:layout_marginBottom="20dp">

        <ListView
            android:id="@+id/resultList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/columns"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lineAndButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:background="@color/white_greyish"
            />

        <Button
            android:id="@+id/eliminate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/line"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:text="حذف"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:padding="3dp"
            />

    </LinearLayout>

</RelativeLayout>