<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@id/part"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp"
        android:gravity="center"
        android:drawableRight="@drawable/question"
        android:textSize="17sp"
        />

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/questionTitle"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white_greyish" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/line2"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/line"
        android:layout_marginTop="10dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            >

        </RadioGroup>

    </ScrollView>

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_above="@id/login_layout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white_greyish" />
<!--
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:onClick="onBackClicked"/>

    <Button
        android:id="@+id/buttonForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:textSize="15sp"
        android:padding="3dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:onClick="onForwardClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonBack"
        android:layout_marginBottom="10dp"
        android:text="DONE"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="1200dp"
        android:layout_marginStart="120dp"
        android:background="@drawable/button_background"
        android:onClick="onDoneClicked"
        />
-->

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="end"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/back"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="onBackClicked" />

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/done"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="onDoneClicked" />



        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="start"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/forward"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="onForwardClicked"
            />
    </LinearLayout>


</RelativeLayout>